# rag-support

./: .env.example  .gitignore  README.md  generating.ipynb  process_crawled_data.ipynb  pyproject.toml  run_crawler.sh  scraping.ipynb  store.ipynb
diff/: __init__.py
site_scraping/: scrapy.cfg
site_scraping/site_scraping/: items.py  middlewares.py  pipelines.py  settings.py
site_scraping/site_scraping/spiders/: context_spider.py
yandexgpt/: __init__.py
